include/wish_client_c.h


typedef struct wish_client_handle_* wish_client_handle;
typedef bison_hash wish_hash;
WISH_API wish_hash wish_key(const char* name);
typedef int wish_error;
#define WISH_OK 0 
#define WISH_ERR_NULL -1 
#define WISH_ERR_NOT_FOUND -2 
#define WISH_ERR_TRANSPORT -3 
#define WISH_ERR_EXCEPTION -4 
#define WISH_ERR_AMBIGUOUS -5 
typedef void (*wish_session_fn)(wish_client_handle client, void* userdata);
WISH_API wish_client_handle wish_client_tcp_create(const char* host, uint16_t port);
WISH_API wish_client_handle wish_client_tls_create(const char* host, uint16_t port);
WISH_API wish_client_handle wish_client_stream_create(const char* path);
WISH_API wish_client_handle wish_client_pipe_create(const char* path);
WISH_API wish_client_handle wish_client_term_create(void);
WISH_API void wish_client_destroy(wish_client_handle client);
WISH_API wish_error wish_client_run(wish_client_handle client, wish_session_fn session_fn, void* userdata);
WISH_API wish_error wish_client_run_with_params(
    wish_client_handle client, wish_session_fn session_fn, void* userdata, bison_handle connect_params);
WISH_API void wish_client_wait(wish_client_handle client);
WISH_API void wish_client_quit(wish_client_handle client);
WISH_API const char* wish_last_error(wish_client_handle client);
WISH_API wish_error wish_set_style_preset(wish_client_handle client, const char* preset);
WISH_API wish_error
wish_set_style_preset_async(wish_client_handle client, const char* preset, rmi_future_handle* out_future);
WISH_API wish_error wish_register_template(wish_client_handle client, const char* name, const char* descriptor);
WISH_API wish_error wish_register_template_async(
    wish_client_handle client, const char* name, const char* descriptor, rmi_future_handle* out_future);
WISH_API rmi_proxy_handle wish_instantiate_template(wish_client_handle client, const char* name, const char* prefix);
WISH_API wish_error wish_instantiate_template_async(
    wish_client_handle client, const char* name, const char* prefix, rmi_future_handle* out_future);
WISH_API rmi_proxy_handle wish_proxy_get(wish_client_handle client, const char* dot_path);
WISH_API wish_error wish_release(wish_client_handle client, const char* prefix);
WISH_API rmi_proxy_handle
wish_instantiate(wish_client_handle client, wish_hash ns, wish_hash klass, bison_handle params);
WISH_API wish_error wish_list_apps(char** out);
WISH_API wish_error
wish_run_app(wish_client_handle client, const char* app_name, const char* const* args, size_t nargs);
WISH_API wish_error
wish_upload_file(wish_client_handle client, const char* name, const char* data, size_t data_len);
WISH_API wish_error
wish_download_file(wish_client_handle client, const char* name, char** out_data, size_t* out_len);
WISH_API wish_error wish_upload_file_from_path(wish_client_handle client, const char* name, const char* local_path);
WISH_API wish_error wish_download_file_to_path(wish_client_handle client, const char* name, const char* local_path);
WISH_API wish_error
wish_upload_package_from_path(wish_client_handle client, const char* dest_path, const char* local_zip_path);